// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c1 {
  fill: #72af5d;
}

.c2 {
  fill: #17a3a5;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #ebc764;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="c1"
    color="#72af5d"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="c2"
    color="#17a3a5"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="c3"
    color="#ebc764"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works animated 1`] = `
.c1 {
  fill: #72af5d;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-name: slide-right;
  animation-name: slide-right;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c2 {
  fill: #17a3a5;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-name: slide-up-left;
  animation-name: slide-up-left;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #ebc764;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-name: slide-down;
  animation-name: slide-down;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="c1"
    color="#72af5d"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="c2"
    color="#17a3a5"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="c3"
    color="#ebc764"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works thinking 1`] = `
.c1 {
  fill: #72af5d;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-name: thinking;
  animation-name: thinking;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.c2 {
  fill: #17a3a5;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-name: thinking;
  animation-name: thinking;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #ebc764;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-name: thinking;
  animation-name: thinking;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="c1"
    color="#72af5d"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="c2"
    color="#17a3a5"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="c3"
    color="#ebc764"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works with different colours 1`] = `
.c1 {
  fill: #fff;
}

.c2 {
  fill: #fff;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #fff;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="c1"
    color="#fff"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="c2"
    color="#fff"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="c3"
    color="#fff"
    points="16,0 16,32 32,16"
  />
</svg>
`;
